<resources>
    <string name="app_name">Tugas1_PBM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="selamat_datang"><u>Selamat Datang</u></string>
    <string name="nama">Nama</string>
    <string name="npm">NPM</string>
    <string name="jurusan">Jurusan</string>
    <string name="simpan">Simpan</string>


</resources>