<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradien"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="30dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:layout_margin="40dp"
        app:cardElevation="50dp"
        app:cardCornerRadius="35dp"
        >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:layout_height="40dp"
            android:hint="@string/nama"
            android:id="@+id/nama"
            />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/npm"
            android:id="@+id/npm"
            />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/jurusan"
            android:id="@+id/jurusan"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/simpan"
            android:id="@+id/simpan"
            />

    </LinearLayout>
        </androidx.cardview.widget.CardView>
</LinearLayout>